fix wrapped header

--- a/app/[locale]/components/Home/HelpUsGrow/HelpUsGrow.module.scss
+++ b/app/[locale]/components/Home/HelpUsGrow/HelpUsGrow.module.scss
@@ -60,12 +60,12 @@
 }
 .anchor{
     display: block;
-    height: 55px;
-    margin-top: -55px;
+    height: 50px;
+    margin-top: -50px;
     visibility: hidden;
     @media screen and (min-width: $desktop) {
-        height: 90px;
-        margin-top: -90px;
+        height: 45px;
+        margin-top: -45px;
     }
 }
 .helpList{
